# nixorb

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  appimage-flatpak-fixes.patch  atspi-crash-fix.patch  d  hyperpop.py  install.fish  install.sh  mypy.ini  nixorb-lint-fixes.patch  orb-window-qml-version-fix.patch  pyproject.toml  release-workflow-fixes.patch  requirements-cuda.txt  requirements-dev.txt  requirements.txt  ruff-import-order-fix.patch  setup.cfg  tailscale-version-appimage-fixes.patch  torch-install-retry-fix.patch  visibility-diagnostics.patch
 v.github/: PULL_REQUEST_TEMPLATE.md
 v.github/workflows/: ci.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  update-changelog.yml
.hi/.please/.dont/.look/.in/.here/.Im/.begging/.you/: d
assets/: generate_icon.py  orb.qml
assets/shaders/: orb_glow.frag  orb_glow.vert  particle.frag  particle.vert
config/: default.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  PLUGINS.md
nixorb/: __init__.py  cli.py  components.py  main.py  settings.py
nixorb-pkg/: PKGBUILD  build-pkg.sh
nixorb/action/: __init__.py  clipboard.py  executor.py
nixorb/asr/: __init__.py  wake_word.py  whisper_engine.py
nixorb/core/: __init__.py  aur_checker.py  event_bus.py  thread_pool.py  vram_manager.py
nixorb/llm/: __init__.py  backends.py  prompt_builder.py  tool_dispatcher.py
nixorb/memory/: __init__.py  vector_store.py
nixorb/plugins/: __init__.py  loader.py
nixorb/plugins/builtin/: kdeconnect_plugin.py  systemd_plugin.py
nixorb/tts/: __init__.py  glados_tts.py  hf_tts.py  openai_tts.py  piper_tts.py  tts_factory.py
nixorb/ui/: __init__.py  confirm_dialog.py  hotkey.py  orb_window.py  settings_window.py  tray_icon.py
nixorb/utils/: __init__.py  all_utils.py  audio.py  crypto.py  hypernix_client.py  logger.py  model_downloader.py  paths.py  system_info.py  web_search.py
nixorb/vision/: __init__.py  screen_capture.py
packaging/: PKGBUILD  io.nixorb.NixOrb.yml  nixorb.desktop  nixorb.install
packaging/appimage/: AppImageBuilder.yml  build_appimage.sh
plugins/: example_plugin.py  kdeconnect_plugin.py  notes_plugin.py  systemd_status.py  timer_plugin.py  volume_plugin.py  weather_plugin.py
scripts/: compile_shaders.sh  download_models.sh  run_tests.sh  setup_dev.sh
tests/: __init__.py  conftest.py  test_action_confirmation.py  test_asr.py  test_clipboard.py  test_core.py  test_crypto.py  test_event_bus.py  test_executor.py  test_llm_backends.py  test_memory.py  test_plugins.py  test_settings.py  test_tts_fallback.py  test_vram_manager.py  test_web_search.py
v.ruff_cache/0.15.12/: 130277769146838157
