[build-system]
# BUG FIX: was 'setuptools.backends.legacy:build' which doesn't exist in any
# setuptools version. Correct backend is 'setuptools.build_meta'.
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nixorb"
version = "0.1.0"
description = "Floating AI assistant orb for Arch Linux — KDE Plasma 6 Wayland — GTX 1080"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "NixOrb Contributors" }]
keywords = ["ai", "assistant", "wayland", "kde", "linux", "llm", "tts", "asr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]

dependencies = [
    # GUI
    "PySide6>=6.7.0",
    "qasync>=0.27.1",            # BUG FIX: was missing from deps entirely
    # AI — inference
    "faster-whisper>=1.0.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    # AI — backends
    "openai>=1.35.0",
    "huggingface-hub>=0.23.0",
    "transformers>=4.42.0",
    # Vector memory
    "chromadb>=0.5.3",
    # Local LLM (optional but declared)
    "llama-cpp-python>=0.2.82",
    # HTTP (for Ollama backend)
    "aiohttp>=3.9.5",            # BUG FIX: was missing — OllamaBackend uses it
    # TTS
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "tomli-w>=1.0.0",
    # CLI
    "typer[all]>=0.12.3",
    # Wake word
    "openwakeword>=0.6.0",
    # Crypto (config export)
    "cryptography>=42.0.0",
    # Log highlighting
    "pygments>=2.18.0",
    # Async file I/O
    "aiofiles>=23.2.1",
    # hypernix integration
    "hypernix",
    # Hotkey fallback
    "pynput>=1.7.6",             # BUG FIX: was missing from deps
    # D-Bus (KGlobalAccel)
    "dbus-python>=1.3.2",        # BUG FIX: was missing from deps
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pygments",
]
cuda118 = [
    "torch==2.7.1+cu118",
    "torchaudio==2.7.1+cu118",
]

[project.scripts]
nixorb = "nixorb.cli:app"

[project.gui-scripts]
nixorb-gui = "nixorb.main:main"

[project.urls]
Homepage   = "https://github.com/nixorb/nixorb"
Repository = "https://github.com/nixorb/nixorb"
Issues     = "https://github.com/nixorb/nixorb/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["nixorb*"]

[tool.setuptools.package-data]
nixorb = ["py.typed"]
"*"    = ["*.qml", "*.frag", "*.vert", "*.qsb", "*.png", "*.toml"]

[tool.setuptools_scm]
write_to = "nixorb/_version.py"

# ------------------------------------------------------------------ #
#  Tooling config                                                     #
# ------------------------------------------------------------------ #
[tool.ruff]
target-version = "py312"
line-length    = 100
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version      = "3.12"
strict              = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.coverage.run]
source = ["nixorb"]
